# herald

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: config.cmake
docker/: Dockerfile
examples/config/: dist.yml
examples/ctr/: run_hetu.py  run_laia.py  run_laia_fae.py  run_tf_local.py  tf_launch_server.py  tf_launch_worker.py
examples/ctr/models/: __init__.py  dcn_avazu.py  dcn_criteosearch.py  deepfm_avazu.py  deepfm_criteosearch.py  dfmsfm_criteosearch.py  dfmslr_avazu.py  emb_sum_dcn_criteosearch.py  emb_sum_deepfm_avazu.py  emb_sum_ncf_movie.py  emb_sum_wdl_criteo.py  fae_dcn_criteosearch.py  fae_deepfm_avazu.py  fae_ncf_movie.py  fae_wdl_criteo.py  load_data.py  ncf_movie.py  wdl_avazu.py  wdl_criteo.py
examples/ctr/tests/: hybrid_dcn_criteo.sh  hybrid_dfm_criteo.sh  hybrid_dfmsfm_criteosearch.sh  hybrid_dfmslr_avazu.sh  hybrid_emb_sum_dcn_criteosearch.sh  hybrid_emb_sum_dfm_avazu.sh  hybrid_emb_sum_wdl_criteo.sh  hybrid_fae_dcn_criteosearch.sh  hybrid_fae_dfm_avazu.sh  hybrid_fae_ncf_movie.sh  hybrid_fae_wdl_criteo.sh  hybrid_wdl_criteo.sh  hybrid_wdl_criteo_laia.sh  local_dcn_criteo.sh  local_dfm_criteo.sh  local_wdl_criteo.sh  ps_dcn_criteo.sh  ps_dfm_criteo.sh  ps_wdl_criteo.sh  readme  run.sh  tf_2workers_dcn_criteosearch.sh  tf_2workers_dfm_avazu.sh  tf_2workers_ncf_movie.sh  tf_2workers_wdl_criteo.sh  tf_server.sh
examples/ctr/tf_models/: __init__.py  tf_dcn_criteosearch.py  tf_deepfm_avazu.py  tf_ncf_movie.py  tf_wdl_adult.py
examples/ctr/torch_models/: README.md  README_1.md  fae_data_preprocess.py  torch_models.py
laia/: CMakeLists.txt
laia/include/: array.h  binding.h  laia_scheduler.h  mini_lru_cache.h  ring_buffer.h  share_mem.h  thread_pool.h  topk_scheduler.h  utils.h
laia/src/: array.cc  laia_scheduler.cc  python_binding.cc  thread_pool.cc  topk_scheduler.cc  utils.cc
laia/test/: CMakeLists.txt  simple_test.py  test_array.cc  test_array.py  test_cpp_array.cc  test_laia_scheduler.py  test_ringbuffer.cc  test_share_mem.cc  wdl_criteo_cache_perf.txt
ps-lite/: CMakeLists.txt
ps-lite/include/common/: logging.h  reg_buffer.h  sarray.h
ps-lite/include/ps/: kvapp.h  ps.h
ps-lite/include/ps/internal/: customer.h  mem_pool.h  message.h  postoffice.h  threadsafe_pqueue.h  threadsafe_queue.h  van.h
ps-lite/include/ps/psf/: PSFunc.h  cachetable.h
ps-lite/include/ps/server/: PSFHandle.h  kvserver.h
ps-lite/include/ps/worker/: PSAgent.h  hetu_binding.h  kvworker.h
ps-lite/src/: PSFhandle_embedding.cc  customer.cc  hetu_binding.cc  ibverbs_van.h  meta.h  network_utils.h  postoffice.cc  python_binding.cc  rdma_transport.h  rdma_utils.h  rdma_van.h  resender.h  van.cc  van_common.h  zmq_van.h
python/: runner.py
python/hetu/: __init__.py  context.py  cstable.py  dataloader.py  distribute.py  ndarray.py  optimizer.py
python/hetu/gpu_ops/: EmbeddingLookUp.py  ParameterServerCommunicate.py  Reshape.py  executor.py
python/hetu/laia/: .gitignore  MiniLRUCache.h  __init__.py  laia.pyx  laia_dataloader.py  laia_setup.py
src/: CMakeLists.txt
src/hetu_cache/include/: cache.h
src/hetu_cache/src/: cache.cc  hetu_client.cc  python_api.cc
src/ops/: CuSparseCsrmv.cu  CudnnConv2d.cu  CudnnConv2dAddBias.cu
